src/test/ui/type-alias-impl-trait/issue-68368-non-defining-use.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/issue-68368-non-defining-use.rs:9:29
   |
LL | fn f<'a>() -> Alias<'a, ()> {}
   |                             ^^
   |
note: used non-generic type `()` for generic parameter
  --> $DIR/issue-68368-non-defining-use.rs:7:16
   |
LL | type Alias<'a, U> = impl Trait<U>;
   |                ^

error: aborting due to previous error

